[tool.poetry]
name = "orderline-dw-prefect-server"
version = "0.1.0"
description = ""
authors = ["Mischa Barthel <barthel.m@hsleiden.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
